--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 # example netlify.toml
 [build]
-  command = "next build"
+  command = "CI= next build"
   functions = "netlify/functions"
   publish = "build"
