--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "CI= npm run build"
+  command = "CI= npm next build"
   publish = ".next"
 
 [[plugins]]
