--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.23.1",
     "emailjs-com": "^3.2.0",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.0.5",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
